--- a/app-ui/package.json
+++ b/app-ui/package.json
@@ -16,7 +16,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "css-loader": "^6.10.0",
+    "html-webpack-plugin": "^5.6.0",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -29,6 +34,13 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "sass": "^1.72.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
-  }
+    "vite": "^5.2.0",
+    "css-loader": "^6.10.0",
+    "html-webpack-plugin": "^5.6.0",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4"
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
