--- a/app-ui/package.json
+++ b/app-ui/package.json
@@ -11,16 +11,17 @@
   },
   "dependencies": {
     "@picocss/pico": "^2.0.6",
+    "css-loader": "^6.10.0",
+    "history": "^5.3.0",
+    "html-webpack-plugin": "^5.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "sort-by": "^1.2.0",
-    "css-loader": "^6.10.0",
-    "html-webpack-plugin": "^5.6.0",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
+    "sort-by": "^1.2.0",
     "style-loader": "^3.3.4"
   },
   "devDependencies": {
@@ -29,16 +30,16 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "css-loader": "^6.10.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "sass": "^1.72.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
-    "style-loader": "^3.3.4"
+    "style-loader": "^3.3.4",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   },
   "browserslist": [
     "defaults"
